--- a/config.toml
+++ b/config.toml
@@ -42,3 +42,9 @@ theme = "LoveIt"
   [markup.highlight]
     # false 是必要的设置 (https://github.com/dillonzq/LoveIt/issues/158)
     noClasses = false
+
+
+[taxonomies]
+  author = "authors"
+  tag = "tags"
+  category = "categories"
